--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "chokidar": "^1.7.0",
     "glob": "^7.1.2",
+    "long": "^3.2.0",
+    "mpyqjs": "^1.0.1",
     "ps-list": "^4.0.0"
   }
 }
